<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/calorieLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/calorie_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    <TextView
        android:id="@+id/calorieField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/calorieLabel"
        android:text="@string/calorie_field"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/statusFoodListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/calorieField"
        android:layout_marginTop="10dp"
        android:text="@string/status_foodlist_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ListView
        android:id="@+id/statusFoodList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/statusFoodListLabel"
        />

</RelativeLayout>
